@@ -10,6 +10,8 @@
 - SOPORTE: añadida configuración por defecto para problemas
  en radares con psr, grabaciones mssrs,scdi y lan ext.
 - BUG: filtercat_s y filtersacsic_s no soportaban sac=0
+- SOPORTE: 0.0.0.0 como ip de origen para grabar todo lo
+ que llegue a ese grupo mcast.
 
 0.77
 - TIP: para quitar la sequencias ansi al activar dest_debug
